--- a/src/components/countryPageStyle.css
+++ b/src/components/countryPageStyle.css
@@ -19,7 +19,7 @@ body {
 
 .cs-modal-width {
     width: 93vw !important;
-    max-width: 93vw !important;
+    max-width: 1800px !important;
 }
 
 .modal-content {
@@ -27,16 +27,28 @@ body {
 }
 
 .cs-modal-mt {
-    margin-top: 10vw !important;
-}
-
-.cs-pos-flag {
-    top: -30% !important
+    margin-top: 200px !important;
 }
 
 .cs-pt {
     padding-top: 25% !important;
 }
+
+.cs-pointer {
+    cursor: pointer;
+}
+
+.scroll-track {
+  min-width: max-content;
+  -webkit-overflow-scrolling: touch;
+  scroll-snap-type: x mandatory;
+}
+
+.cs-w-second {
+  scroll-snap-align: start;
+  width: 120px !important;
+}
+
 
 /*Background*/
 .cs-bg-main {
@@ -65,6 +77,11 @@ body {
     border-right: solid 2px #1B1D1F !important;
 }
 
+.cs-border-therd {
+    border-top: solid 1px #6C727F !important;
+    border-bottom: solid 1px #6C727F !important;
+}
+
 /*Font*/
 .cs-tc-one {
     color: #D2D5DA !important;
@@ -79,6 +96,14 @@ body {
     height: 50px !important;
     width: 75px !important;
     object-fit: cover;
+}
+
+.cs-pos-flag {
+    top: -30% !important
+}
+
+.cs-flag-size {
+    max-height: 30vw !important;
 }
 
 /*Form Control*/
@@ -122,4 +147,20 @@ body {
 .cs-checkbox .form-check-input:checked {
     background-color: #4E80EE !important;
     border-color: #4E80EE !important;
+}
+
+/*Scrollbar*/
+*::-webkit-scrollbar {
+  width: 16px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #1B1D1F;
+  border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #6C727F;
+  border-radius: 4px;
 }
